translate german text to english

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <div id="network-list-wrapper">
             <ul id="network-list">
-                <!-- Netzwerke werden hier aufgelistet -->
+                <!-- Networks will be listed here -->
             </ul>
         </div>
     </div>
