--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="/login" class="btn btn-link">Back</a>
+            <!-- <a href="/login" class="btn btn-link">Back</a> -->
             <h2>Choose a network from the list or type in an SSID</h2>
         </div>
         <div id="connect-form">
